Enhance card passing mechanics and UI in GameActor
- Added `PassingDirection` property and `ChangePassingDirection` method to `GameActor` for managing card passing direction.
- Updated `AddPlayer` to create `BotPlayer` instances.
- Modified `Map` method to accept `workflowInstanceId` and return a `Game` object with passing direction.
- Introduced `PassCards` method in `GameActor` for handling card passing logic.
- Updated `IGameActor` interface to include `PassCards` and modified `Map` signature.
- Added `SelectCardsToPass` method in `Round` class for bot card selection.
- Enhanced `RoundPlayer` with `CardsToPass` property to track cards intended for passing.
- Updated `Game` record to include `WorkflowInstanceId` and `PassingDirection`.
- Added `PassCards` method in `SignalRService` for sending card passing events.
- Modified `GameHub` to handle card passing events.
- Introduced new classes like `CardsPassedEvent` and `StartNewRoundActivityOutput` for workflow management.
- Updated CSS for card animations and layout improvements.
- Added JavaScript for card animations during passing.
- Updated unit tests to reflect method signature changes and new functionality.

--- a/src/Hearts.BlazorApp/Components/CardComponent.razor
+++ b/src/Hearts.BlazorApp/Components/CardComponent.razor
@@ -1,5 +1,57 @@
-﻿<h3>CardComponent</h3>
+@using Hearts.Contracts
+
+<img id="@cardId" src="@(ImageUrl)" class="@imageClass" @onclick="OnImageClick" />
 
 @code {
+    [Parameter]
+    public required Card Card { get; set; }
 
+    [Parameter]
+    public bool FaceDown { get; set; } = false;
+
+    [Parameter]
+    public bool Toggled { get; set; } = false;
+
+    [Parameter]
+    public Card[] SelectedCards { get; set; } = [];
+
+    [Parameter]
+    public EventCallback<Card> OnClick { get; set; }
+
+    [Parameter]
+    public string Style { get; set; } = "";
+
+    [Parameter]
+    public string CardSelectedStyle { get; set; } = "";
+
+    private string cardId = $"card-{Guid.NewGuid()}";    
+
+    private string ImageUrl => FaceDown ? "/images/cards/back.svg" : $"/images/cards/{DisplayRank(Card!.Rank)}_of_{Card.Suit.ToString().ToLower()}.svg";
+
+    private async Task OnImageClick()
+    {        
+        if (SelectedCards.Contains(Card) || SelectedCards.Length < 3)
+        {
+            Toggled = !Toggled;
+
+            if (OnClick.HasDelegate)
+            {
+                await OnClick.InvokeAsync(Card);
+            }
+        }
+    }
+
+    private string imageClass => Toggled ? $"card {CardSelectedStyle} {Style} z-0" : $"card {Style} z-0";
+
+    private string? DisplayRank(Rank? rank)
+    {
+        return rank switch
+        {
+            Rank.Ace => rank?.ToString().ToLower(),
+            Rank.King => rank?.ToString().ToLower(),
+            Rank.Queen => rank?.ToString().ToLower(),
+            Rank.Jack => rank?.ToString().ToLower(),
+            _ => ((int?)rank).ToString()
+        };
+    }
 }
