--- a/src/Hearts.BlazorApp/Pages/LobbyPage.razor
+++ b/src/Hearts.BlazorApp/Pages/LobbyPage.razor
@@ -85,8 +85,8 @@
     {
         return Task.FromResult(new List<Game>
         {
-            new Game(Guid.NewGuid(), []),
-            new Game(Guid.NewGuid(), [])
+            new Game(Guid.NewGuid(), "", []),
+            new Game(Guid.NewGuid(), "", [])
         });
     }
 
@@ -94,8 +94,8 @@
     {
         return Task.FromResult(new List<Game>
         {
-            new Game(Guid.NewGuid(), []),
-            new Game(Guid.NewGuid(), [])
+            new Game(Guid.NewGuid(), "", []),
+            new Game(Guid.NewGuid(), "", [])
         });
     }
 
