--- a/src/Hearts.BlazorApp/wwwroot/css/tailwind.css
+++ b/src/Hearts.BlazorApp/wwwroot/css/tailwind.css
@@ -11,6 +11,14 @@ h2 {
     @apply text-2xl font-bold text-gray-800 mb-4;
 }
 
+button:disabled {
+    background-color: #a0a0a0; /* Gray background */
+    color: #ffffff; /* White text */
+    border-color: #808080; /* Gray border */
+    cursor: not-allowed; /* Change cursor to indicate disabled state */
+    opacity: 0.6; /* Make the button semi-transparent */
+}
+
 #blazor-error-ui {
     color-scheme: light only;
     background: lightyellow;
@@ -73,4 +81,38 @@ h2 {
 
 .loading-progress-text:after {
     content: var(--blazor-load-percentage-text, "Loading");
+}
+
+.card {
+    @apply transition-transform duration-300;
+}
+
+.card.up {
+    @apply -translate-y-3;
+}
+
+.card.down {
+    @apply translate-y-3;
+}
+
+.card.left {
+    @apply -translate-x-3;
+}
+
+.card.right {
+    @apply translate-x-3;
+}
+
+@keyframes moveToNextPlayer {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-50px) rotate(10deg);
+    }
+
+    100% {
+        transform: translateX(200px);
+    }
 }
