--- a/src/Hearts.BlazorApp/wwwroot/css/site.css
+++ b/src/Hearts.BlazorApp/wwwroot/css/site.css
@@ -608,8 +608,14 @@
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
+  .h-30 {
+    height: calc(var(--spacing) * 30);
+  }
   .h-32 {
     height: calc(var(--spacing) * 32);
+  }
+  .h-36 {
+    height: calc(var(--spacing) * 36);
   }
   .h-40 {
     height: calc(var(--spacing) * 40);
